# esp32-digital-feeder-debuger

./: .gitignore  example.env  index.html  main.js  main.js.LICENSE.txt  partitions.csv  platformio.ini  project.code-workspace
.github/workflows/: client-deploy.yaml  dev-firmware-release.yml  firmware-release.yml  stable-firmware-release.yml
client/: package-lock.json  package.json  webpack.config.js
client/public/: index.html
client/src/: App.js  App.jsx  routes.jsx  theme.js
client/src/api/: githubApi.js  httpClient.js
client/src/base/: Button.jsx  Card.jsx  CircularSliderInput.jsx  NumericInput.jsx  RangeControl.jsx  Spinner.jsx  SwitchInput.jsx  index.js
client/src/components/: ControlTile.jsx  DashboardSection.jsx  InfoTile.jsx  MotorControl.jsx  PIDTuner.jsx  SelectList.jsx  index.js
client/src/layouts/: AuthLayout.jsx  RootLayout.jsx  Section.jsx  Sidebar.jsx  Topbar.jsx  index.js
client/src/pages/: Auth.jsx  Dashboard.jsx  FirmwareUpdate.jsx  LedControl.jsx  NotFound.jsx  ServoControl.jsx
firmware/: CMakeLists.txt  example.env  platformio.ini  sdkconfig.esp32dev
firmware/src/: main.c  test.h
firmware/src/control/: control.c  control.h
scripts/: _common.py  buildClient.py  env.py
src/: CMakeLists.txt  main.c
src/encoder/: encoder.h
src/fs_manager/: fs_manager.c  fs_manager.h
src/server/: server.c  server.h
src/web_server/: router.c  router.h  web_server.c  web_server.h
src/web_server/controllers/: test.c  test.h
src/web_server/net_config/: net_config.c  net_config.h
src/web_server/web_static/: web_static.c  web_static.h
(+37 files in other folders)
